# hermes-tts

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: quickstart.py
hermes_tts/: __init__.py  cli.py  converter.py  engines.py  senders.py  service.py
voice-clone/: SKILL.md  setup.md
voice-clone/scripts/: clone_voice.py  prepare_audio.py  requirements.txt  search_audio.py
voice-tts/: SKILL.md  setup.md
voice-tts/scripts/: requirements.txt  speak.py  voices.py
